--- a/src/infrastructure/CMakeLists.txt
+++ b/src/infrastructure/CMakeLists.txt
@@ -1,9 +1,16 @@
 set(SOURCES
+        catalogs/FileDisplacementCatalog.cpp
+        catalogs/FileGaugeCatalog.cpp
+        catalogs/FilePrinterCatalog.cpp
         hardware/dm5002/DM5002RFPressureSensor.cpp
         hardware/g540/G540LPT.cpp
+        fmt/fmt_application.cpp
+        fmt/fmt_domain.cpp
         logging/ConsoleLogger.cpp
         logging/FileLogger.cpp
         clock/SessionClock.cpp
+        process/ProcessLifecycle.cpp
+        process/ProcessRunner.cpp
 )
 
 if(WIN32)
@@ -13,8 +20,8 @@ if(WIN32)
             platform/com/ComPort_windows.cpp
             platform/lpt/LptPort_windows.cpp
             platform/sleep/sleep_windows.cpp
-            camera/windows/DShowVideoStream.cpp
-            camera/windows/SampleGrabberCB.cpp
+            camera/windows/dshow/DShowVideoStream.cpp
+            camera/windows/dshow/SampleGrabberCB.cpp
     )
 elseif(UNIX)
     message(STATUS "Configuring for Linux")
@@ -23,6 +30,7 @@ elseif(UNIX)
             platform/com/ComPort_linux.cpp
             platform/lpt/LptPort_linux.cpp
             platform/sleep/sleep_linux.cpp
+            camera/linux/v4l/V4LCamera.cpp
     )
 endif()
 
