--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,6 @@ find_package(OpenGL REQUIRED)
 add_subdirectory(src/domain)
 add_subdirectory(src/application)
 add_subdirectory(src/infrastructure)
+add_subdirectory(src/viewmodels)
 add_subdirectory(src/ui)
 add_subdirectory(src/app)
