--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,5 +1,16 @@
 add_executable(CleanGraduator
         main.cpp
+        bootstrap/AppBootstrap.cpp
+        bootstrap/AppBootstrap.h
+        bootstrap/DIContainer.h
+        bootstrap/modules/DomainModule.cpp
+        bootstrap/modules/DomainModule.h
+        bootstrap/modules/InfrastructureModule.cpp
+        bootstrap/modules/InfrastructureModule.h
+        bootstrap/modules/ViewModelsModule.cpp
+        bootstrap/modules/ViewModelsModule.h
+        bootstrap/modules/UiModule.cpp
+        bootstrap/modules/UiModule.h
 )
 
 target_link_libraries(CleanGraduator
