--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,6 +1,10 @@
-add_definitions(-DPLATFORM_WINDOWS)
+if (WIN32)
+    add_definitions(-DPLATFORM_WINDOWS)
+elseif (UNIX)
+    add_definitions(-DPLATFORM_LINUX)
+endif ()
 
-add_executable(CleanGraduator
+    add_executable(CleanGraduator
         main.cpp
         bootstrap/AppBootstrap.cpp
         bootstrap/AppBootstrap.h
