--- a/config/bootstrap/cameras.ini
+++ b/config/bootstrap/cameras.ini
@@ -75,16 +75,16 @@ width=640
 height=480
 fps=30
 
-[camera_6]
-backend=v4l
-source=/dev/video0
-width=640
-height=480
-fps=30
-
-[camera_7]
-backend=v4l
-source=/dev/video0
-width=640
-height=480
-fps=30
+;[camera_6]
+;backend=v4l
+;source=/dev/video0
+;width=640
+;height=480
+;fps=30
+;
+;[camera_7]
+;backend=v4l
+;source=/dev/video0
+;width=640
+;height=480
+;fps=30
