Add info settings storage/viewmodel/widget and bootstrap wiring

--- a/src/infrastructure/CMakeLists.txt
+++ b/src/infrastructure/CMakeLists.txt
@@ -33,6 +33,7 @@ set(SOURCES
         overlay/crosshair/CrosshairVideoOverlay.cpp
 
         storage/QtSettingsStorage.cpp
+        storage/QtInfoSettingsStorage.cpp
         storage/VideoAngleSourcesStorage.cpp
         storage/LogSourcesStorage.cpp
 
