--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -18,6 +18,8 @@ add_library(ui STATIC
 
         widgets/status_bar/QtAppStatusBarWidget.cpp
         widgets/status_bar/QtAppStatusBarWidget.h
+        widgets/status_bar/QtMotorDriverStatusBarWidget.cpp
+        widgets/status_bar/QtMotorDriverStatusBarWidget.h
 
         widgets/logging/QtLogViewerWidget.cpp
         widgets/logging/QtLogViewerWidget.h
