--- a/src/domain/CMakeLists.txt
+++ b/src/domain/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_library(domain STATIC fmt/fmt_domain.cpp)
+add_library(domain STATIC fmt/fmt_domain.cpp
+        core/motor/motor/FrequencyLimits.h
+        ports/calibration_actuator/ICalibrationActuator.h)
 
 
 target_include_directories(domain
