--- a/src/domain/CMakeLists.txt
+++ b/src/domain/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(domain STATIC
         core/calibration/calculation/CalibrationMotionPhase.h
         core/calibration/calculation/PressurePoints.h
         ports/calibration/motion_controller/CalibrationMotionInput.h
+        core/angle/AngleSourceError.h
 )
 
 
