--- a/setup/motor.ini
+++ b/setup/motor.ini
@@ -1,2 +1,25 @@
 [motor]
 implementation=g540lpt
+; Номер бита концевика начала хода (0–7)
+bit_begin_limit_switch = 0
+
+; Номер бита концевика конца хода (0–7)
+bit_end_limit_switch = 1
+
+; Байт управления: закрыть обе заслонки (hex)
+byte_close_both_flaps = 0x00
+
+; Байт управления: открыть входную заслонку (hex)
+byte_open_input_flap = 0x01
+
+; Байт управления: открыть выходную заслонку (hex)
+byte_open_output_flap = 0x02
+
+; Адрес LPT-порта (hex)
+lpt_port = 0x378
+
+; Максимальная частота ШИМ (Гц)
+max_freq_hz = 2000
+
+; Минимальная частота ШИМ (Гц)
+min_freq_hz = 200
