--- a/setup/pressure_source.ini
+++ b/setup/pressure_source.ini
@@ -1,4 +1,34 @@
+; ================================
+; PRESSURE SOURCE CONFIGURATION
+; ================================
+
 [pressure_source]
-type=dm5002
-com_port=COM7
-poll_rate=12
+
+; type = dm5002 | fake
+type = fake
+
+
+; =========================================================
+; === DM5002 configuration ================================
+; =========================================================
+; Используется если type = dm5002
+
+com_port = COM3
+poll_rate = 10              ; Hz
+protocol = standard         ; standard | rf
+
+
+; =========================================================
+; === Fake pressure source configuration ==================
+; =========================================================
+; Используется если type = fake
+
+; Давление задаётся в Паскалях
+from_kgf = 0            ; 0 kgf
+to_kgf   = 400            ; 400 kgf
+
+duration_ms = 30000          ; время от from до to
+poll_interval_ms = 100       ; частота генерации
+
+; mode = ramp | pingpong
+mode = pingpong
