--- a/src/domain/CMakeLists.txt
+++ b/src/domain/CMakeLists.txt
@@ -2,6 +2,11 @@ add_library(domain STATIC
         fmt/fmt_domain.cpp
         core/calibration/recording/TimeSeries.cpp
         core/calibration/tracking/PressurePointsTracker.cpp
+        core/drivers/motor/MotorDriverEvent.h
+        core/drivers/motor/MotorDriverError.h
+        core/drivers/motor/MotorFlapsState.h
+        "core/drivers/motor/MotorDriverState.h"
+        core/drivers/motor/MotorFrequency.h
 )
 
 
